# nubra-talib

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml  testpypi.yml
examples/: quickstart.py
scripts/: generate_talib_docs.py
src/nubra_talib/: __init__.py  convert.py  indicators.py
