[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nubra_talib"
version = "0.1.0"
description = "Nubra historical data to pandas with TA-Lib indicators"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
dependencies = [
  "pandas>=2.0",
  "TA-Lib>=0.4.28",
]

[project.urls]
Homepage = "https://example.com"
